--- a/dev/index.html
+++ b/dev/index.html
@@ -42,7 +42,8 @@
             salt water<br>
             mixed with<br>
             air.”<br>
-            -nayyirah waheed
+            -- meditation<br>
+            // nayyirah waheed
             </p>
         </div>
         <section class="hero flex__row flex--center">
@@ -58,19 +59,20 @@
         <div class="flex__row section__row flex--sb flex--center about__jamie">
             <div class="flex__column">
                 <h1 class="flex__item about__greeting">
-                    Hey, I'm Jamie
+                    I'm Jamie
                 </h1>
                 <div class="about__content flex__item flex__column">
                     <h3 class="about__subtitle">
-                        // developer<br>
+                        // builder of things<br>
                         // shark afficionado
                     </h3>
-                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>. I also really love <a href="https://www.instagram.com/explore/tags/chefjamieshark/" target="_blank">making meals</a> for my friends and myself as a form of self-care. I identify as genderqueer and use <strong>they/them</strong> pronouns.</p>
-                    <p><em>Ex:</em> Jamie is great. They were born in Seoul, raised in Chicago, schooled in St. Louis, and now reside in Oakland with their dog - Jelly.</em></p>
+                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. I really love <a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">making meals</a> for my friends and myself as a form of self-care. I identify as gender non-binary and use <a href="http://motto.time.com/4327915/gender-neutral-pronouns/" target="_blank"><strong>they/them</strong></a> pronouns.</p>
+                    <p><em>Ex:</em> Jamie is great. They were born in Seoul, raised in Chicago, went to school in St. Louis, and now they live in Oakland with their dog - Jelly.</em></p>
+                    <p>After studying music, medicine, and then various stints in sushi restaurants and coffee shops, I found a great passion in building technology and bringing people's ideas to execution. I interpret building as a form of healing and aim to integrate that into my daily work.</p>
                 </div>
             </div>
             <div class="flex__item flex--shrink about__asset">
-                <img class="about__image" src="./img/jamieshark.jpg" />
+                <img class="about__image" src="./img/jamie-board.jpg" />
             </div>
         </div>
         <div class="flex__row section__row flex--sb flex--center about__jelly">
@@ -91,45 +93,26 @@
                 </div>
             </div>
         </div>
-        <div class="flex__column section__row flex--sa flex--center about__oakland">
-            <h1 class="flex__item flex--shrink about__greeting">
-                We live in
-            </h1>
-            <div class="flex__item flex--grow about__oakland__container">
-                <a href="#" class="about__oakland__letter">o</a>
-                <a href="#" class="about__oakland__letter">a</a>
-                <a href="#" class="about__oakland__letter">k</a>
-                <a href="#" class="about__oakland__letter">l</a>
-                <a href="#" class="about__oakland__letter">a</a>
-                <a href="#" class="about__oakland__letter">n</a>
-                <a href="#" class="about__oakland__letter">d</a>
-            </div>
-        </div>
-        <div class="flex__row section__row flex--sa flex--center about__oakland">
-            <div class="flex__item flex__column flex--center flex--shrink about__oakland__container">
-                <img class="about__oakland__logo" src="./img/oakland_logo_black.png" />
-                <a class="about__oakland__org" href="#" target="_blank">
-                    <div class="flex__column flex--center">
-                        <span class="about__oakland__description">Opportunity for healing</span>
-                        <span class="about__oakland__name">Sogorea Te' Land Trust</span>
-                    </div>
-                </a>
-                <div class="about__oakland__underline">
-                </div>
-            </div>
-        </div>
     </section>
     <section id="work" class="section__content flex__column">
         <div class="flex__row section__row section__header">
             <h1>_ work</h1>
         </div>
         <div class="flex__row section__row">
+            <p><em>tl;dr</em> - <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a></p>
             <p>
                 I'm currently working on building some great things at Dropbox in San Francisco.
                 In the past, I've worked at ZURB, Northwestern University, and Razorfish. You can find some of my work below.
             </p>
         </div>
         <div class="flex__row section__row portfolio__container">
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="https://d1fldwwydewvss.cloudfront.net/static/img/ace/live-stickers/wizards/hilarious@2x.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Ongoing Projects</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://paper.dropbox.com/doc/Jamie-Projects-NwXhlcsWFqNn1FEy95TaU"></a>
+              </figcaption>
+            </figure>
             <figure class="portfolio__item">
               <img class="portfolio__image" src="./img/juggle-yeti.svg" />
               <figcaption class="portfolio__caption">
@@ -152,6 +135,13 @@
               </figcaption>
             </figure>
             <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/favicon.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">CONEMO</h2>
+                <a class="portfolio__anchor" target="_blank" href="http://cbitsdev.feinberg.northwestern.edu/project/conemo/"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
               <img class="portfolio__image" src="./img/rainbow.png" />
               <figcaption class="portfolio__caption">
                 <h2 class="portfolio__title">Rainbow Ipsum</h2>
@@ -161,6 +151,15 @@
         </div>
         <div class="flex__column speaking__container">
             <h2>Speaking Engagements</h2>
+            <div class="flex__item flex--shrink about__asset">
+                <img class="about__image" src="./img/jamie-angular-conference.jpg" />
+            </div>
+            <div class="flex__item flex--shrink about__asset">
+                <img class="about__image" src="./img/jamie-lwt.jpg" />
+            </div>
+            <div class="flex__item flex--shrink about__asset">
+                <img class="about__image" src="./img/jamie-lwt-2.jpg" />
+            </div>
             <div class="flex__item flex__row speaking__list">
                 <span class="flex__item flex--shrink speaking__year">2016</span>
                 <ul class="flex__item flex__column fa-ul">
@@ -185,7 +184,110 @@
             <h2>Inclusion</h2>
             <p>Outside of work, I'm involved with Girl Develop It: Oakland, Lesbians Who Tech, and Diversity Advocates. I love discussing the importance of diversity and inclusion in the tech industry and what that even looks like. If you'd like to chat about that, feel free to reach out.</p>
         </div>
+        <div class="flex__column section__row">
+            <h2>Modeling</h2>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="https://d1fldwwydewvss.cloudfront.net/static/img/ace/live-stickers/wizards/hilarious@2x.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">THÚY Custom Clothier</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://paper.dropbox.com/doc/Jamie-Projects-NwXhlcsWFqNn1FEy95TaU"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/juggle-yeti.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Stuzo Clothing</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/yeti-hero.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">St. Harridan</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-apps"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/inky-point.svg" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Miki Vargas Photography</h2>
+                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/inky-parse"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/favicon.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Qwear Fashion</h2>
+                <a class="portfolio__anchor" target="_blank" href="http://cbitsdev.feinberg.northwestern.edu/project/conemo/"></a>
+              </figcaption>
+            </figure>
+            <figure class="portfolio__item">
+              <img class="portfolio__image" src="./img/rainbow.png" />
+              <figcaption class="portfolio__caption">
+                <h2 class="portfolio__title">Rainbow Ipsum</h2>
+                <a class="portfolio__anchor" target="_blank" href="http://rainbowipsum.com"></a>
+              </figcaption>
+            </figure>
+        </div>
     </section>
+    <div class="flex__column section__row flex--sa flex--center about__oakland">
+            <h1 class="flex__item flex--shrink about__greeting">
+                We live in
+            </h1>
+            <div class="flex__row oakland__tiles">
+                <div class="oakland__column">
+                    <div class="oakland__duple">
+                        <h3 class="oakland__org">
+                            Peac<span class="oakland__letter">o</span>ck<br />
+                            Rebellion
+                        </h3>
+                    </div>
+                    <div class="oakland__duple">
+                        <h3 class="oakland__org">
+                            Ph<span class="oakland__letter">A</span>t Beets CSA
+                        </h3>
+                    </div>
+                </div>
+                <div class="oakland__column">
+                    <div class="oakland__single">
+                        <h3 class="oakland__org">
+                            Blac<span class="oakland__letter">k</span><br />
+                            Lives<br />
+                            Matter<br />
+                        </h3>
+                    </div>
+                </div>
+                <div class="oakland__column">
+                    <div class="flex__row">
+                        <div class="oakland__quad">
+                            <h3 class="oakland__org">
+                                QU<span class="oakland__letter">L</span>TURE<br />
+                                COLLECTIVE
+                            </h3>
+                        </div>
+                        <div class="oakland__quad">
+                            <h3 class="oakland__org">
+                                C<span class="oakland__letter">A</span>USA :: JUSTA
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="flex__row">
+                        <div class="oakland__quad">
+                            <h3 class="oakland__org">
+                                Sogorea Te <br />
+                                La<span class="oakland__letter">n</span>d Trust
+                            </h3>
+                        </div>
+                        <div class="oakland__quad">
+                            <h3 class="oakland__org">
+                                SPECTRUM<br />
+                                QUEER ME<span class="oakland__letter">D</span>IA
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     <section id="contact" class="section__content flex__column">
         <div class="flex__row section__header">
             <h1>_ contact</h1>
@@ -230,13 +332,14 @@
             <i class="flex__item footer__scum fa fa-rebel"></i>
         </div>
         <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-53912752-1', 'auto');
-        ga('send', 'pageview');
+          ga('create', 'UA-77191197-1', 'auto');
+          ga('send', 'pageview');
+
         </script>
     </footer>
 </body>
