Some content changes.

--- a/dev/index.html
+++ b/dev/index.html
@@ -99,67 +99,49 @@
             <h1>_ work</h1>
         </div>
         <div class="flex__row section__row">
-            <p><em>tl;dr</em> - <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a></p>
-            <p>
-                I'm currently working on building some great things at Dropbox in San Francisco.
-                In the past, I've worked at ZURB, Northwestern University, and Razorfish. You can find some of my work below.
-            </p>
+            <p><em>tl;dr</em> - You can either <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a> or <a href="https://github.com/attnjamie" target="_blank">check out my Github</a>.</p>
         </div>
-        <div class="flex__row section__row portfolio__container">
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="https://d1fldwwydewvss.cloudfront.net/static/img/ace/live-stickers/wizards/hilarious@2x.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Ongoing Projects</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://paper.dropbox.com/doc/Jamie-Projects-NwXhlcsWFqNn1FEy95TaU"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/juggle-yeti.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Foundation for Sites</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/yeti-hero.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Foundation for Apps</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-apps"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/inky-point.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Foundation for Emails</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/inky-parse"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/favicon.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">CONEMO</h2>
-                <a class="portfolio__anchor" target="_blank" href="http://cbitsdev.feinberg.northwestern.edu/project/conemo/"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/rainbow.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Rainbow Ipsum</h2>
-                <a class="portfolio__anchor" target="_blank" href="http://rainbowipsum.com"></a>
-              </figcaption>
-            </figure>
+        <div class="flex__row section__row flex--sa">
+            <div class="work__column">
+                <h3>Presently</h3>
+                <ul>
+                    <li>Dropbox</li>
+                </ul>
+            </div>
+            <div class="work__column">
+                <h3>Ongoing</h3>
+                <ul>
+                    <li>Qulture Collective</li>
+                    <li>QTPOC Healing Directory</li>
+                </ul>
+            </div>
+            <div class="work__column">
+                <h3>Past</h3>
+                <ul>
+                    <li>Foundation</li>
+                    <li>CONEMO</li>
+                    <li>Rainbow Ipsum</li>
+                </ul>
+            </div>
+        </div>
+        <div class="flex__row section__row">
+            <p>I have experience with the following technologies and concepts:</p>
+            <p>Responsive web design, ReactJS, AngularJS, Wordpress Theme Development, A/B Testing, static site generators, design input</p>
         </div>
         <div class="flex__column speaking__container">
             <h2>Speaking Engagements</h2>
-            <div class="flex__item flex--shrink about__asset">
-                <img class="about__image" src="./img/jamie-angular-conference.jpg" />
+            <div class="flex__row section__row flex--sa">
+                <div class="flex__item flex--shrink about__asset">
+                    <img class="about__image" src="./img/jamie-angular-conference.jpg" />
+                </div>
+                <div class="flex__item flex--shrink about__asset">
+                    <img class="about__image" src="./img/jamie-lwt.jpg" />
+                </div>
+                <div class="flex__item flex--shrink about__asset">
+                    <img class="about__image" src="./img/jamie-lwt-2.jpg" />
+                </div>
             </div>
-            <div class="flex__item flex--shrink about__asset">
-                <img class="about__image" src="./img/jamie-lwt.jpg" />
-            </div>
-            <div class="flex__item flex--shrink about__asset">
-                <img class="about__image" src="./img/jamie-lwt-2.jpg" />
-            </div>
+
             <div class="flex__item flex__row speaking__list">
                 <span class="flex__item flex--shrink speaking__year">2016</span>
                 <ul class="flex__item flex__column fa-ul">
@@ -180,114 +162,59 @@
                 </ul>
             </div>
         </div>
-        <div class="flex__column section__row">
-            <h2>Inclusion</h2>
-            <p>Outside of work, I'm involved with Girl Develop It: Oakland, Lesbians Who Tech, and Diversity Advocates. I love discussing the importance of diversity and inclusion in the tech industry and what that even looks like. If you'd like to chat about that, feel free to reach out.</p>
+        <div class="flex__row section__row">
+            <p>Want to bring me in for a talk? Here are some past talks I've given. If anything pops out, feel free to contact me.</p>
+            <p>Do you like the work I do or fond of a talk I've given? Consider compensating me for the work, as often times, I'm not paid to speak or consult. All funds I receive go directly to organizations or individuals that support racial justice and QTBIPOC well-being.</p>
+            <p>Venmo, squarecash, paypal</p>
         </div>
         <div class="flex__column section__row">
             <h2>Modeling</h2>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="https://d1fldwwydewvss.cloudfront.net/static/img/ace/live-stickers/wizards/hilarious@2x.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">THÚY Custom Clothier</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://paper.dropbox.com/doc/Jamie-Projects-NwXhlcsWFqNn1FEy95TaU"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/juggle-yeti.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Stuzo Clothing</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/yeti-hero.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">St. Harridan</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-apps"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/inky-point.svg" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Miki Vargas Photography</h2>
-                <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/inky-parse"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/favicon.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Qwear Fashion</h2>
-                <a class="portfolio__anchor" target="_blank" href="http://cbitsdev.feinberg.northwestern.edu/project/conemo/"></a>
-              </figcaption>
-            </figure>
-            <figure class="portfolio__item">
-              <img class="portfolio__image" src="./img/rainbow.png" />
-              <figcaption class="portfolio__caption">
-                <h2 class="portfolio__title">Rainbow Ipsum</h2>
-                <a class="portfolio__anchor" target="_blank" href="http://rainbowipsum.com"></a>
-              </figcaption>
-            </figure>
-        </div>
-    </section>
-    <div class="flex__column section__row flex--sa flex--center about__oakland">
-            <h1 class="flex__item flex--shrink about__greeting">
-                We live in
-            </h1>
-            <div class="flex__row oakland__tiles">
-                <div class="oakland__column">
-                    <div class="oakland__duple">
-                        <h3 class="oakland__org">
-                            Peac<span class="oakland__letter">o</span>ck<br />
-                            Rebellion
-                        </h3>
-                    </div>
-                    <div class="oakland__duple">
-                        <h3 class="oakland__org">
-                            Ph<span class="oakland__letter">A</span>t Beets CSA
-                        </h3>
-                    </div>
-                </div>
-                <div class="oakland__column">
-                    <div class="oakland__single">
-                        <h3 class="oakland__org">
-                            Blac<span class="oakland__letter">k</span><br />
-                            Lives<br />
-                            Matter<br />
-                        </h3>
-                    </div>
-                </div>
-                <div class="oakland__column">
-                    <div class="flex__row">
-                        <div class="oakland__quad">
-                            <h3 class="oakland__org">
-                                QU<span class="oakland__letter">L</span>TURE<br />
-                                COLLECTIVE
-                            </h3>
-                        </div>
-                        <div class="oakland__quad">
-                            <h3 class="oakland__org">
-                                C<span class="oakland__letter">A</span>USA :: JUSTA
-                            </h3>
-                        </div>
-                    </div>
-                    <div class="flex__row">
-                        <div class="oakland__quad">
-                            <h3 class="oakland__org">
-                                Sogorea Te <br />
-                                La<span class="oakland__letter">n</span>d Trust
-                            </h3>
-                        </div>
-                        <div class="oakland__quad">
-                            <h3 class="oakland__org">
-                                SPECTRUM<br />
-                                QUEER ME<span class="oakland__letter">D</span>IA
-                            </h3>
-                        </div>
-                    </div>
-                </div>
+            <div class="flex__row section__row portfolio__container">
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/sth.jpg" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">St. Harridan</h2>
+                    <a class="portfolio__anchor" target="_blank" href="https://paper.dropbox.com/doc/Jamie-Projects-NwXhlcsWFqNn1FEy95TaU"></a>
+                  </figcaption>
+                </figure>
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/miki.jpg" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">Miki Vargas Photography</h2>
+                    <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/inky-parse"></a>
+                  </figcaption>
+                </figure>
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/stuzo.jpg" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">Stuzo Clothing</h2>
+                    <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation"></a>
+                  </figcaption>
+                </figure>
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/thuy.jpg" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">THÚY Custom Clothier</h2>
+                    <a class="portfolio__anchor" target="_blank" href="https://github.com/zurb/foundation-apps"></a>
+                  </figcaption>
+                </figure>
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/favicon.png" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">Qwear Fashion</h2>
+                    <a class="portfolio__anchor" target="_blank" href="http://cbitsdev.feinberg.northwestern.edu/project/conemo/"></a>
+                  </figcaption>
+                </figure>
+                <figure class="portfolio__item">
+                  <img class="portfolio__image" src="./img/sharpe.jpg" />
+                  <figcaption class="portfolio__caption">
+                    <h2 class="portfolio__title">Sharpe Suiting</h2>
+                    <a class="portfolio__anchor" target="_blank" href="http://rainbowipsum.com"></a>
+                  </figcaption>
+                </figure>
             </div>
         </div>
+    </section>
     <section id="contact" class="section__content flex__column">
         <div class="flex__row section__header">
             <h1>_ contact</h1>
@@ -315,7 +242,7 @@
                 </a>
             </div>
             <div class="flex__item flex__column flex--shrink contact__container">
-                <a target="_blank" href="https://www.linkedin.com/profile/view?id=129993573">
+                <a target="_blank" href="https://www.linkedin.com/in/attnjamie">
                     <div class="flex__item contact__icon">
                         <i class="fa fa-linkedin fa-2x"></i>
                     </div>
