Restructuring CSS files and adding more performant video.

--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,7 @@
   <script type="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
   <script src="js/main.min.js"></script>
 </head>
-<body class="flex flex__column">
+<body>
     <header class="flex__row">
         <nav class="nav">
             <section class="nav__items">
@@ -42,13 +42,13 @@
             salt water<br>
             mixed with<br>
             air.”<br>
-            -- meditation<br>
+            &mdash; meditation<br>
             // nayyirah waheed
             </p>
         </div>
         <section class="hero flex__row flex--center">
-            <video class="hero__video flex__item flex--grow" loop muted>
-        		<source src="./img/kuroshio.mp4" type="video/mp4">
+            <video class="hero__video flex__item flex--grow" loop muted autoplay preload="auto">
+        		<source src="./img/kuroshio540.mp4" type="video/mp4">
         	</video>
         </section>
     </header>
@@ -66,9 +66,26 @@
                         // builder of things<br>
                         // shark afficionado
                     </h3>
-                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. I really love <a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">making meals</a> for my friends and myself as a form of self-care. I identify as gender non-binary and use <a href="http://motto.time.com/4327915/gender-neutral-pronouns/" target="_blank"><strong>they/them</strong></a> pronouns.</p>
-                    <p><em>Ex:</em> Jamie is great. They were born in Seoul, raised in Chicago, went to school in St. Louis, and now they live in Oakland with their dog - Jelly.</em></p>
-                    <p>After studying music, medicine, and then various stints in sushi restaurants and coffee shops, I found a great passion in building technology and bringing people's ideas to execution. I interpret building as a form of healing and aim to integrate that into my daily work.</p>
+                    <h3>I almost always...</h3>
+                    <ul>
+                        <li>play "Rogue" class</li>
+                        <li>pick the fire Pokémon starter</li>
+                        <li>drink coffee black</li>
+                    </ul>
+                    <h3>I really love...</h3>
+                    <ul>
+                        <li><a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">making meals</a> for my friends</li>
+                        <li>ocean things</li>
+                        <li>live music</li>
+                    </ul>
+                    <h3>I am...</h3>
+                    <ul>
+                        <li>trans / non-binary</li>
+                        <li>1.5 Generation Korean</li>
+                        <li>ENT(P/J)</li>
+                    </ul>
+                    <p>I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for ocean things, live music, and cold brew coffee. I really love <a href="https://www.instagram.com/explore/tags/jamiesharkcooks/" target="_blank">making meals</a> for my friends and myself as a form of self-care. I identify as gender non-binary and use <a href="http://motto.time.com/4327915/gender-neutral-pronouns/" target="_blank"><strong>they/them</strong></a> pronouns. <em>Ex:</em> Jamie is great. They were born in Seoul, raised in Chicago, went to school in St. Louis, and now they live in Oakland with their dog - Jelly.</em></p>
+                    <p>After studying music, medicine, and various stints in sushi restaurants and coffee shops, I found a great passion in building technology and bringing people's ideas to execution. I interpret building as a form of healing and aim to integrate that into my daily work.</p>
                 </div>
             </div>
             <div class="flex__item flex--shrink about__asset">
@@ -88,8 +105,21 @@
                         // Border Collie mix<br>
                         // peanut butter afficionado
                     </h3>
-                    <p>Jelly generally lays around and looks cute. She occasionally places her nose on computer screens and is convinced that it helps move the creative process along.</p>
-                    <p>It doesn't.</p>
+                    <h3>I almost always...</h3>
+                    <ul>
+                        <li>lay around in the sun</li>
+                        <li>put my nose on computer screens</li>
+                        <li>look cute</li>
+                    </ul>
+                    <h3>I really love...</h3>
+                    <ul>
+                        <li>peanut butter</li>
+                        <li>cheese whiz</li>
+                    </ul>
+                    <h3>I am...</h3>
+                    <ul>
+                        <li>dog</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -99,7 +129,7 @@
             <h1>_ work</h1>
         </div>
         <div class="flex__row section__row">
-            <p><em>tl;dr</em> - You can either <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a> or <a href="https://github.com/attnjamie" target="_blank">check out my Github</a>.</p>
+            <p><em>tl;dr</em> - I'm available for hire as a technology consultant, speaker, or a model. You can also <a href="https://www.dropbox.com/s/uu7wfklc72yi0q7/ResumeJamie.pdf?dl=0" target="_blank">view my résumé</a>.</p>
         </div>
         <div class="flex__row section__row flex--sa">
             <div class="work__column">
@@ -113,6 +143,7 @@
                 <ul>
                     <li>Qulture Collective</li>
                     <li>QTPOC Healing Directory</li>
+                    <li>TGIJP</li>
                 </ul>
             </div>
             <div class="work__column">
