Redoing hero layout.

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,7 +21,7 @@
   <script src="js/main.min.js"></script>
 </head>
 <body>
-    <header class="flex__row">
+    <!-- <header class="flex__row">
         <nav class="nav">
             <section class="nav__items">
                 <ul class="nav__list">
@@ -51,8 +51,28 @@
         		<source src="./img/kuroshio540.mp4" type="video/mp4">
         	</video>
         </section>
-    </header>
-    <section id="intro" class="section__content flex__column">
+    </header> -->
+    <section class="flex__row hero">
+        <div class="hero__content flex flex--jc">
+            <p>
+            “if<br>
+            the ocean<br>
+            can calm itself,<br>
+            so can you.<br>
+            we<br>
+            are both<br>
+            salt water<br>
+            mixed with<br>
+            air.”<br>
+            &mdash; meditation<br>
+            // nayyirah waheed
+            </p>
+        </div>
+        <video class="hero__video" loop muted autoplay preload="auto">
+            <source src="./img/kuroshio540.mp4" type="video/mp4">
+        </video>
+    </section>
+<!--     <section id="intro" class="section__content flex__column">
         <div class="flex__row section__row section__header">
             <h1>_ intro</h1>
         </div>
@@ -123,8 +143,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section id="work" class="section__content flex__column">
+    </section> -->
+<!--     <section id="work" class="section__content flex__column">
         <div class="flex__row section__row section__header">
             <h1>_ work</h1>
         </div>
@@ -280,7 +300,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="footer flex__row">
         <div class="footer__content">
             <p>Jamie Chung is a developer currently located in the Bay Area.
